# TAUSO

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  CLAUDE_TODO.md  MANIFEST.in  README.md  conda-lock.yml  conftest.py  environment-dev.yml  environment.yml  pyproject.toml  pytest.ini  setup.py
.claude/: settings.json
.claude/agents/: ml.md
.github/workflows/: ci.yml  update-lockfile.yml
data/: GFP_first_exp.fasta
documentation/: DATA_SETUP.md  INSTALLATION.md  PACK_FEATURES.md  QUICKSTART.md  SETUP_REFERENCE.md  TRAINING_DATA.md
documentation/OligoAI/: Overview.md  RunningModel.md
documentation/amber_md/: ATTRIBUTION.md  IMPROVEMENTS.md  README.md
documentation/feature_run/: ReproducibleClusterSetup.md  ReproducibleSetup.md  build_env.sh  preflight.sh  run_features.sh  setup_data.sh
documentation/package/: PackageSetup.md
documentation/software/: ServerSetup.md
legacy/old_model_generation/: consts_dataframe.py  main.py
notebooks/: consts.py  notebook_utils.py  preprocessing.py
notebooks/Access_batch_calculations_checks/: Access_Calculator_batch_check.py  Check_populate_batch.ipynb  RNAAccess_calculate_batch_check.py
notebooks/competitors/: Analysis.ipynb  clinaso.ipynb  clinaso_rnaseh_notes.md  clinaso_utils.py  compare_all.ipynb  miRanda.ipynb  miranda_utils.py  oligowalk.ipynb  oligowalk_utils.py  pfred.ipynb  pfred_glue.py  pfred_utils.py  regen_common.py  regenerate_miranda.py  regenerate_oligowalk.py  regenerate_pfred.py  regenerate_sfold.py  sfold.ipynb  sfold_utils.py
notebooks/data/: asoptimizer_data_processed.csv  data_cleanup.ipynb  utility.py
notebooks/features/: calculate_features.py  feature_extraction.py  pack_features.py
notebooks/graphs/: DataProcessing.ipynb  ModelPipeline.ipynb  consts.py
notebooks/models/: 1_model_choice.py  1_parameter_choice.py  2_objective_choice.py  3_selection_choice.py  4_feature_selection.py  5_final_model.py  CreateTest.ipynb  FeatureAnalysisOligo.ipynb  _chem_overhaul_ab.py  _chem_overhaul_ab_results.csv  _lambdarank_relaxed_probe.py  _lambdarank_relaxed_results.csv  best_models_parameters.json  cell_line_split_results.csv  champions.py  cohort_precision_metrics.csv  cohort_split_results.csv  common.py  deploy.py  evaluate.py  experiment_sweep.py  mini_experiment.py  model_choice.py  seq_feature_signal_g4_selfstruct.py  toxicity_motif_signal.py  train_model.py  utility.py
notebooks/molecular_dynamics/: GPU_FAST_PATH.md  IMPROVEMENTS.md  README.md  amber_pipe.sh  create_files.sh  jobs_req.sh
notebooks/prediction/: DIAPH3_plasmid_sequence.fasta  _chemistries.py  calculate_DIAPH3_features.ipynb  design_DIAPH3.py  design_MALAT1.py
notebooks/production/: aso_to_idt.ipynb
notebooks/saved_features/: ASO_4 palindromic.csv  ASO_6 palindromic.csv  ASO_ENC.csv  ASO_at_rich_region_score.csv  ASO_at_skew.csv  ASO_cg_dinucleotide_fraction.csv  ASO_dinucleotide_entropy.csv  ASO_dispersed_repeats_score.csv  ASO_entropy.csv  ASO_flexible_dinucleotide_fraction.csv  ASO_gc_block_length.csv  ASO_gc_content.csv  ASO_gc_content_3prime_end.csv  ASO_gc_skew.csv  ASO_gc_skew_ends.csv  ASO_ggg_counts.csv  ASO_hairpin_dG_energy.csv  ASO_hairpin_score.csv  ASO_hairpin_tm.csv  ASO_homooligo_count.csv  ASO_nucleotide_diversity.csv  ASO_poly_pyrimidine_stretch.csv  ASO_purine_content.csv  ASO_stop_codon_count.csv  ASO_tai.csv  ASO_tandem_repeats_score.csv  ASO_toxic_motif_count.csv  CAI_score_20_CDS.csv  CAI_score_30_CDS.csv  CAI_score_40_CDS.csv  CAI_score_50_CDS.csv  CAI_score_60_CDS.csv  CAI_score_70_CDS.csv  CAI_score_global_CDS.csv  CET_DIFF_37_HYBR.csv  DNA_HYBR_DIFF.csv  ENC_score_20_CDS.csv  ENC_score_30_CDS.csv  ENC_score_40_CDS.csv  ENC_score_50_CDS.csv  (+823 more)
notebooks/saved_features_oligo/: CAI_score_20_CDS.csv  CAI_score_30_CDS.csv  CAI_score_40_CDS.csv  CAI_score_50_CDS.csv  CAI_score_60_CDS.csv  CAI_score_70_CDS.csv  CAI_score_global_CDS.csv  CET_DIFF_37_HYBR.csv  ClinASO_score.csv  DNA_HYBR_DIFF.csv  ENC_score_20_CDS.csv  ENC_score_30_CDS.csv  ENC_score_40_CDS.csv  ENC_score_50_CDS.csv  ENC_score_60_CDS.csv  ENC_score_70_CDS.csv  ENC_score_global_CDS.csv  Electroporation.csv  Gymnosis.csv  LNA_DIFF_37_HYBR.csv  Lipofection.csv  METHYL_CYTOSINES.csv  MOE_DIFF_37_MD_GB_HYBR.csv  MOE_DIFF_37_MD_PB_HYBR.csv  Mapped_Cell_Proxy.csv  Modification_3prime_run.csv  Modification_5prime_run.csv  Modification_adjacent_pair_count.csv  Modification_block_count.csv  Modification_char_entropy.csv  Modification_dominant_mod_fraction.csv  Modification_evenness.csv  Modification_fraction.csv  Modification_in_core.csv  Modification_local_density_max.csv  Modification_longest_repeat_run.csv  Modification_max_block_length.csv  Modification_mean_gap.csv  Modification_min_distance_to_3prime.csv  Modification_min_distance_to_5prime.csv  (+631 more)
notebooks/saved_features_oligo_old/: Electroporation.csv  Gymnosis.csv  Lipofection.csv  OW_Break_Target.csv  OW_Duplex.csv  OW_Intra_Oligo.csv  OW_Overall.csv  OW_Tm.csv  Other.csv  PFRED_PLS.csv  PFRED_SVM.csv  Sequence_a_count.csv  Sequence_c_count.csv  Sequence_g_count.csv  Sequence_t_count.csv  Sequence_ta_dinucleotide_fraction.csv  chem_2nd_gen.csv  chem_3rd_gen.csv  is_hepa.csv  miranda_energy.csv  miranda_score.csv  sfold_accessibility.csv
notebooks/saved_features_v2/: CAI_score_20_CDS.csv  CAI_score_30_CDS.csv  CAI_score_40_CDS.csv  CAI_score_50_CDS.csv  CAI_score_60_CDS.csv  CAI_score_70_CDS.csv  CAI_score_global_CDS.csv  CET_DIFF_37_HYBR.csv  DNA_HYBR_DIFF.csv  ENC_score_20_CDS.csv  ENC_score_30_CDS.csv  ENC_score_40_CDS.csv  ENC_score_50_CDS.csv  ENC_score_60_CDS.csv  ENC_score_70_CDS.csv  ENC_score_global_CDS.csv  Electroporation.csv  Gymnosis.csv  HalfLife_Source.csv  LNA_DIFF_37_HYBR.csv  Lipofection.csv  METHYL_CYTOSINES.csv  MOE_DIFF_37_MD_GB_HYBR.csv  (+828 more)
recipe/: meta.yaml
scripts/: fold_additivity.py  make_fold_graphs.py  probe_gpu.py
tests/: conftest.py  consts.py  test_averaging.py  test_data_iteration.py  test_find_raccess.py  test_fold.py  test_locus_to_data.py  test_random.py  test_sense_accessiblity.py  test_sequences.py  test_vienna_fold.py  trig_raccess.txt
(+889 files in other folders)
