[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tauso"
version = "1.0.0"
description = "TAUSO: ASO design toolkit"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Michael Kovaliov"}]

dependencies = [
    "requests",
    "numpy==2.3.4",
    "pandas>=2.0,<3",
    "pyarrow",
    "scipy",
    "numba>=0.65,<0.66",
    "biopython>=1.87,<2",
    "gffutils>=0.14,<1",
    "pyranges>=0.1.4,<0.2",
    "primer3-py",
    "tqdm",
    "click",
    "gdown",
    "platformdirs",
    "pandarallel",
    "pympler",
    "xgboost>=3.2,<4",
    "codon-bias==0.5.0",
    "lxml",
    "risearch-tauso>=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-regressions",
    "pytest-xdist",
    "shap",
    "matplotlib",
    "seaborn",
    "optuna",
    "pandas-stubs",
    "scipy-stubs",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
"tauso._raccess" = [
    "install_raccess.sh",
    "patches/*.patch"
]
"tauso.features.rnase_motifs" = ["weights/*.json"]
"tauso.features.hybridization" = ["weights/*.csv"]
"tauso.inference" = ["model/*.json", "model/*.txt"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["tauso*"]

[project.scripts]

tauso = "tauso.cli:main"

[tool.ruff]
# Target the Python version you're using for TAUSO
target-version = "py38"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["F401", "I", "B", "UP", "TID"]
fixable = ["F401", "I", "B", "UP"]
ignore = [
    "B905",   # Zip strict
    "B904",   # Raise from
    "UP015",  # Redundant 'r' in open
    "UP045",  # Using different type of optional type
    "UP006",  # Using different type of list type
    "UP007",  # Using | for annotations
    "UP022",  # capture_output instead of stdout and stderr
    "TID252", # Allow relative imports
] # Ignore zip strict, raise from

[tool.ruff.lint.isort]
# Groups your internal 'tauso' imports separately from 3rd party libs
known-first-party = ["tauso"]
combine-as-imports = true

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"notebooks" = { msg = "ILLEGAL IMPORT: src/tauso must never import from notebooks." }

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["TID251"]
"notebooks/**/*" = ["TID251"]