[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tauso"
version = "1.0.0"
description = "TAUSO: ASO design toolkit"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Michael Kovaliov"}]

dependencies = [
    "requests",
    "numpy>=2.4.6,<2.5",
    "pandas>=2.0,<3",
    "pyarrow",
    "scipy",
    "numba>=0.65,<0.66",
    "biopython>=1.87,<2",
    "gffutils>=0.14,<1",
    "pyranges>=0.1.4,<0.2",
    "primer3-py",
    "tqdm",
    "click",
    "gdown",
    "platformdirs",
    "pandarallel",
    "pympler",
    "xgboost>=3.2,<4",
    "codon-bias>=0.5,<0.6",
    "lxml",
    "risearch-tauso>=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-regressions",
    "pytest-xdist",
    "shap",
    "matplotlib",
    "seaborn",
    "optuna",
    "mypy",
    "pandas-stubs",
    "scipy-stubs",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
"tauso._raccess" = [
    "install_raccess.sh",
    "patches/*.patch"
]
"tauso.features.rnase_motifs" = ["weights/*.json"]
"tauso.features.hybridization" = ["weights/*.csv"]
"tauso.inference" = ["model/*.json", "model/*.txt"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["tauso*"]

[project.scripts]

tauso = "tauso.cli:main"

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["F401", "F841", "I", "B", "UP", "TID"]
fixable = ["F401", "I", "B", "UP"]
ignore = [
    "B905",   # Zip strict
    "B904",   # Raise from
    "UP015",  # Redundant 'r' in open
    "UP022",  # capture_output instead of stdout and stderr
    "TID252", # Allow relative imports
    # Type/idiom modernization deferred to a dedicated pass (report item 1); py311 target
    # activates these, but the rewrites are churn we want to land separately.
    "UP045",  # X | None over Optional[X]
    "UP006",  # list over List
    "UP007",  # X | Y over Union
    "UP035",  # import from collections.abc, not typing
    "UP033",  # functools.cache over lru_cache(maxsize=None)
]

[tool.ruff.lint.isort]
# Groups your internal 'tauso' imports separately from 3rd party libs
known-first-party = ["tauso"]
combine-as-imports = true

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"notebooks" = { msg = "ILLEGAL IMPORT: src/tauso must never import from notebooks." }

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["TID251"]
"notebooks/**/*" = ["TID251"]

[tool.mypy]
# Advisory only: mypy runs non-blocking in CI (continue-on-error) — it reports, it does not gate.
# Tighten per-module over time as annotation coverage improves.
python_version = "3.11"
files = ["src/tauso"]
ignore_missing_imports = true